# fmt-interspersed-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs  test.rs  tests.rs
