[package]
	edition = "2021"
	name = "fmt-interspersed"
	rust-version = "1.56"
	version = "0.2.1"

	description = "A no-std crate to write an iterator's items, interspersed with a separator, to a destination"
	license = "MIT"

[lib]
	crate-type = ["rlib"]

[features]
	default = ["std"]

	alloc = []
	std = ["alloc"]
