[package]
	edition = "2021"
	name = "fmt-interspersed"
	rust-version = "1.65"
	version = "0.4.0"

	description = "A crate to write an iterator's items, interspersed with a separator, to a destination"
	license = "MIT"

[lib]
	crate-type = ["rlib"]

[features]
	default = ["std"]

	alloc = []
	std = ["alloc"]

[build-dependencies]
	regex = "1.11"
